<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_title_home" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/nav_title_favorites" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/nav_title_logout" />
    </group>

    <item android:title="Sobre Nosotros">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/nav_title_about" />

        </menu>
    </item>

</menu>
